Updated splitRoom for efficiency and readability, removed some unnecessary components (ShowMap). Small code fixes...

--- a/src/dungeon.sass
+++ b/src/dungeon.sass
@@ -3,30 +3,37 @@ body
    height: 100%
    margin: 0 0
    padding: 0 0
-   
+   background: black
+   font-family: -apple-system, BlinkMacSystemFont, 
+   'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+         
+#game
+   border: 1px solid maroon
+
 .boardItem
+   background: maroon
    display: inline-block
    width: 25%
    height: 5%
    text-align: center
-   p
-      margin: 0
-      padding: 0
+   font-weight: bold
+   p:nth-child(1)
+      color: yellow
+      font-style: italic
+      font-size: 20px
 
+   p:nth-child(2)
+      margin: 0px
+      line-height: 1.8
+      background: yellow 
 #root
    display: flex
    justify-content: center
-
-
-#warning
-   position: fixed
-   font-size: 20px
-   z-index: 0
-   bottom: 100px
-   left: 100px
-   background: gray
+button
+   height: 2%
    color: white
-   
+   background: maroon
+
 .GameMessage
    font-family: 'Open Sans', sans-serif
    color: white
